[package]
name = "vlink"
version = "0.2.0"
edition = "2021"
authors = ["devensiv <devensiv@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/emberry-org/vlink"
homepage = "https://github.com/emberry-org/vlink"
description = "vlink made for emberry https://github.com/emberry-org/emberry"
exclude = [
    "pre-commit.sh",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["net", "macros", "rt", "sync", "io-util", "time"], optional = true }
futures = { version = "0.3.27", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.9"

[features]
default = ["logic"]
logic = ["dep:tokio", "dep:futures", "dep:log"]